# dyad

./: Cargo.toml  LICENSE  README.md
.github/: copilot-instructions.md
src/: executor.rs  lib.rs  mini_runtime.rs  promise.rs  saferef.rs  task_group.rs  test_runtime.rs
